Fixed pagination genere+fixare logo in dark mode

--- a/frontend/src/components/CardsPage/css/cards.css
+++ b/frontend/src/components/CardsPage/css/cards.css
@@ -57,3 +57,9 @@
 .categcard-container button:hover {
   color: #ff0032;
 }
+
+.container-pag{
+  display: flex;
+  gap: 2rem;
+  margin-left: 5.5rem;
+}
